# mintmaker-lint

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: main.rs  managers.rs
src/linter/: error.rs  tests.rs
