[package]
name = "mintmaker-lint"
version = "0.1.0"
edition = "2021"
authors = ["staticf0x <staticf0x@pm.me>"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.5"
jsonschema = "0.21.0"
log = "0.4.22"
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }
